# Xenoide

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LanguageConfig.cpp  LanguageConfig.h  MainWindow.cpp  MainWindow.h  README.md  Xenobuild.yaml  main.cpp  sonar-project.properties  vcpkg.json
XenoideCore/: CMakeLists.txt
XenoideCore/src/Xenoide.Core/: CMakeLists.txt
XenoideCore/src/Xenoide.Core/src/: FileService.cpp  FileSystemService.cpp  WorkspaceService.cpp
XenoideCore/src/XenoideWTL/include/: CDialogManager.h
XenoideCore/src/XenoideWTL/src/: CClassView.cpp  CDocument.cpp  CDocumentManager.cpp  CFolderBrowser.cpp  CIdeFrame.cpp
XenoideCore/src/XenoshaderWTL/include/: AppController.h  MainFrame.h  framework.h
XenoideCore/src/XenoshaderWTL/src/: CodeView.cpp  FolderView.cpp  MainFrame.cpp
borc-old/src/grammar/: CMakeLists.txt  Driver.cpp  lexer.l
borc-old/src/grammar/ast/: Node.hpp
borc-old/src/libborc/: CMakeLists.txt
borc-old/src/libborc/borc/: BorcFile.hpp
dep/: CMakeLists.txt
modules/Xenoide.Core/: CMakeLists.txt
modules/Xenoide.Core/src/: FileService.cpp  FileServiceImpl.cpp  FolderService.cpp  FolderServiceImpl.cpp  Version.cpp
pocs/: CMakeLists.txt
pocs/Xenobuild/boc/test-data/: .gitignore
pocs/Xenobuild/borc-old/borc/: borc.py  builder.py  lang.py  (+3 more)
pocs/Xenobuild/build-core-toolchain-clang/: CMakeLists.txt
pocs/gui-mvp/: CMakeLists.txt
pocs/gui-mvp/src/: Document.cpp  DocumentManager.cpp  FindReplace.cpp  MainFrame.cpp
pocs/qt5-scintilla-poc/: CMakeLists.txt
pocs/qt5-scintilla-poc/src/: QMainFrame.hpp  main.cpp
pocs/sandbox/: sandbox.cpp
src/: CMakeLists.txt
src/Xenobuild/: CMakeLists.txt
src/Xenobuild/boc/: .gitignore  CMakeLists.txt
src/Xenobuild/bok-test/: CMakeLists.txt
src/Xenobuild/borc-old/: CMakeLists.txt
src/Xenobuild/build-core-io/: CMakeLists.txt
src/Xenobuild/build-core-package/: CMakeLists.txt
src/Xenobuild/build-core-pipeline/: CMakeLists.txt
src/Xenobuild/build-core-toolchain-gcc/: CMakeLists.txt
src/Xenobuild/build-core-toolchain-vc/: CMakeLists.txt
src/Xenoide.Core/: CMakeLists.txt
src/Xenoide.Core/src/: FileSystemServiceBoost.cpp  FolderExplorer.cpp  Model.cpp  OS.cpp
src/Xenoide.Gui/: CMakeLists.txt
src/Xenoide.Gui/src/: FileFilter.cpp  FolderBrowser.cpp  ObjectTreeView.cpp
src/XenoideGTK/: CMakeLists.txt
src/XenoideGTK/src/: MainApplication.h  MainWindow.cpp  MainWindow.h  main.cpp
src/XenoideLexer/: CMakeLists.txt
src/XenoideWTL/: CMakeLists.txt
src/XenoideWTL/include/: CClassView.h  CDialogManager.h  CDocument.h  CDocumentManager.h  CFolderBrowser.h  CIdeFrame.h
src/XenoideWTL/res/: RCa15952  RCc15952  Resource.rc  resource.h
src/XenoideWTL/src/: CClassView.cpp  CDialogManager.cpp  CDialogManager.h  CDocument.cpp  CDocument.h  CDocumentManager.cpp  CFolderBrowser.cpp  CFolderBrowser.h  CIdeFrame.cpp  CIdeFrame.h  CodeEditor.cpp  CodeEditorConfiguration.h  CustomTabView.h  FileNamePatternMatcher.cpp  IdeCommands.h  Main.cpp  MainFrame.cpp  MainFrame.h
src/XenoshaderWTL/: CMakeLists.txt
src/XenoshaderWTL/app/: CMakeLists.txt
src/XenoshaderWTL/include/: AboutDlg.h  CodeView.h  DocumentManager.h  FolderView.h  MainFrame.h  ObjectTreeView.h
src/XenoshaderWTL/res/: Resource.aps
src/XenoshaderWTL/src/: AboutDlg.cpp  AboutDlg.h  CodeEditor.cpp  CodeEditor.h  CodeEditorConfiguration.cpp  CodeEditorConfiguration.h  DocumentManager.h  FolderExplorer.cpp  FolderExplorer.h  FolderView.cpp  MainFrame.cpp  MainFrame.h  MenuFactory.h  ObjectTreeView.cpp  TreeManager.h  XenoShader.cpp  XenoshaderWTL.cpp
src/bok/: CMakeLists.txt  component.bok.json
src/bok-test/src/: main.cpp
src/build-core/: CMakeLists.txt
src/build-core-package/src/: Package.cpp  PackageFactory.cpp  PackageFactory_FS.cpp  PackageRegistryFactory.cpp
src/build-core-pipeline/src/: BuildCache.cpp  BuildConfiguration.cpp
src/build-core-toolchain/: CMakeLists.txt
src/build-core-toolchain-clang/src/: ClangCompiler.cpp
src/build-core-toolchain-gcc/src/: ServiceFactoryGCC.cpp
src/build-core-toolchain-vc/src/: Compiler_VC.cpp  Linker_VC.cpp
src/build-core-toolchain/src/: Compiler.cpp  Linker.cpp  Linker_Module.cpp  ToolchainFactory.cpp  ToolchainFactory_FS.cpp  ToolchainService_FS.cpp  Toolchain_Mock.cpp
src/build-core/src/: DagNode.cpp  DagVisitor.cpp  Logger_Console.cpp
src/build-feature/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/src/: CMakeBuildSystem.cpp  Command.cpp  Context.cpp  Dependency.cpp  DependencyManager.cpp  FileSystemPackageFactory.cpp  GitRepository.cpp  Package.cpp  PackageFactory.cpp  PackageManager.cpp  Toolchain.cpp  ToolchainFactory.cpp  ToolchainType.cpp  Util.cpp  WildcardClassifier.cpp  string.cpp
src/libxenocli/: CMakeLists.txt  README.md
src/libxenocli/src/: BuildController.cpp  ConfigureController.cpp  ConfigureService.cpp  SetupController.cpp
src/libxenocli/test/: CMakeLists.txt  ConfigureControllerTest.cpp  ConfigureServiceTest.cpp  libxenocli-test.cpp
src/xeno-core/: CMakeLists.txt
src/xeno-core/src/: FileService.cpp  FileSystemService.cpp  FileSystemServiceBoost.cpp  FolderExplorer.cpp  FolderService.cpp  Model.cpp  OS.cpp  Version.cpp  WorkspaceService.cpp
src/xeno-scintilla/: CMakeLists.txt  README.md
src/xeno-scintilla/src/: LexillaAccess.cxx
src/xeno-ui/: CMakeLists.txt
src/xeno-ui/src/: DialogManager.cpp  Document.cpp  DocumentManager.cpp  FileFilter.cpp  FileSearchDialog.cpp  FindReplaceDialog.cpp  FolderBrowser.cpp  IDEFrame.cpp  Menu.cpp  MenuPanel.cpp  ObjectTreeView.cpp  TreeManagerControllerFileSystem.cpp  WindowsUtils.cpp
src/xeno-wtl/: CMakeLists.txt  README.md
src/xeno-wtl/src/: CodeEditor.cpp  CodeView.cpp  MenuFactory.cpp  TreeManager.cpp  TreeManagerControllerFileSystem.cpp
src/xenocli/: CMakeLists.txt
src/xenocli/src/: xenocli.cpp
src/xenoide.core/: CMakeLists.txt
src/xenoide.core/src/: FileService.cpp  FileSystemService.cpp  FileSystemServiceBoost.cpp  FolderExplorer.cpp  FolderService.cpp  Model.cpp  OS.cpp  Version.cpp  WorkspaceService.cpp
(+362 files in other folders)
