
# ide
add_subdirectory ("xeno-core")
add_subdirectory ("xeno-scintilla")
add_subdirectory ("xeno-ui")
add_subdirectory ("xeno-wtl")
add_subdirectory ("XenoideWTL")
add_subdirectory ("XenoshaderWTL")

# build system
add_subdirectory ("core")
add_subdirectory ("libxenocli")
add_subdirectory ("xenocli")
# add_subdirectory("build-core")
# add_subdirectory("build-core-io")
# add_subdirectory("build-core-pipeline")
# add_subdirectory("build-core-package")
# add_subdirectory("build-core-toolchain")
# add_subdirectory("build-core-toolchain-clang")
# add_subdirectory("build-core-toolchain-gcc")
# add_subdirectory("build-core-toolchain-vc")
# add_subdirectory("build-feature")
# add_subdirectory("xb-test")
