# unused sources (for now)
# add_subdirectory("build-core")
# add_subdirectory("build-core-io")
# add_subdirectory("build-core-pipeline")
# add_subdirectory("build-core-package")
# add_subdirectory("build-core-toolchain")
# add_subdirectory("build-core-toolchain-clang")
# add_subdirectory("build-core-toolchain-gcc")
# add_subdirectory("build-core-toolchain-vc")
# add_subdirectory("build-feature")
# add_subdirectory("xb-test")
